# first-genai-project

./: .gitignore  ARCHITECTURE.md
restaurant_reco/: README.md  pyproject.toml  setup.cfg
restaurant_reco/data/processed/: restaurants.parquet
restaurant_reco/src/restaurant_reco/: config.py
restaurant_reco/src/restaurant_reco/data_pipeline/: build.py  cleaning.py  data_dictionary.py  ingest.py
restaurant_reco/tests/: test_build_artifacts.py  test_cleaning.py
restaurant_reco_phase2/: README.md  pyproject.toml  setup.cfg
restaurant_reco_phase2/src/restaurant_reco_phase2/: __main__.py  cli.py  matching.py  models.py  recommender.py  scoring.py
restaurant_reco_phase2/tests/: test_models_validation.py  test_recommender.py
restaurant_reco_phase3/: README.md  pyproject.toml  setup.cfg
restaurant_reco_phase3/src/restaurant_reco_phase3/: __main__.py  cli.py  data_access.py  llm.py  matching.py  models.py  recommender.py  scoring.py  text_normalize.py
restaurant_reco_phase3/tests/: test_integration.py  test_models_validation.py  test_recommender.py
restaurant_reco_phase4/: README.md  setup.cfg
restaurant_reco_phase4/src/restaurant_reco_phase4/: __main__.py  cli.py  llm.py  matching.py  recommender.py  scoring.py  semantic_search.py
restaurant_reco_phase4/tests/: test_integration.py  test_models_validation.py  test_phase4.py  test_recommender.py
restaurant_reco_phase5/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  streamlit_app.py
restaurant_reco_phase5/src/restaurant_reco_phase5/: __main__.py  api.py  cli.py  llm.py  matching.py  models.py  recommender.py  scoring.py  semantic_search.py
restaurant_reco_phase5/src/restaurant_reco_phase5/static/: index.html
restaurant_reco_phase5/tests/: test_api.py  test_e2e_final.py  test_integration.py  test_models_validation.py  test_phase4.py  test_recommender.py
