 [build-system]
 requires = ["setuptools>=70", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "restaurant-reco"
 version = "0.1.0"
 description = "AI restaurant recommendation service - phase 0/1 (data ingest + cleaning)."
 readme = "README.md"
requires-python = ">=3.9"
 license = { text = "MIT" }
 dependencies = [
  "datasets==2.21.0",
  "pandas==2.2.3",
  "pyarrow==16.1.0",
  "pydantic==2.9.2",
  "multiprocess==0.70.16",
  "dill==0.3.8",
  "huggingface-hub==0.24.7",
 ]
 
 [project.optional-dependencies]
 dev = [
   "pytest>=8.0.0",
   "pytest-cov>=5.0.0",
 ]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 addopts = "-q"
 
