[metadata]
name = restaurant-reco
version = 0.1.0
description = AI restaurant recommendation service - phase 0/1 (data ingest + cleaning).
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    datasets==2.21.0
    pandas==2.2.3
    pyarrow==16.1.0
    pydantic==2.9.2
    multiprocess==0.70.16
    dill==0.3.8
    huggingface-hub==0.24.7

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-cov>=5.0.0

