[metadata]
name = restaurant-reco-phase3
version = 0.1.0
description = Phase 3 recommender with LLM-generated explanations and summaries.
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas==2.2.3
    pyarrow==16.1.0
    pydantic==2.9.2
    groq>=0.11.0
    python-dotenv>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest==8.4.2

